correction d'un gap trop grand

--- a/css/style.css
+++ b/css/style.css
@@ -308,7 +308,7 @@ body {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
-    gap: 35px;
+    gap: 25px;
     padding: 30px 0;
 }
 
